added extra paragraph

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div>
         <h3>External styles</h3>
         <pc class="banana">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum asperiores laudantium officiis nisi sint consequatur doloribus ipsum reprehenderit soluta repudiandae?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi id optio quia est mollitia nisi culpa, sapiente, illum accusamus ad maiores numquam blanditiis doloremque ullam praesentium ipsam unde dicta veritatis!</p>
     </div>
 </body>
 </html>
