made it back to the old style

--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Summary</title>
     <style>
-        #red{
+        #red {
             background-color: red;
         }
     </style>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>Practice for CSS styles</h1>
     <h2>There 3 type pf styles</h2>
     <div>
         <h3 style="background-color:blue;">inline styles</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ipsum quia consequuntur omnis incidunt fuga? Dolorum voluptatum perferendis deserunt exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ipsum quia consequuntur omnis incidunt fuga?
+            Dolorum voluptatum perferendis deserunt exercitationem.</p>
     </div>
     <div>
-        <h3 id="red">internal styles</h3>   
-        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptate hic non nulla? Architecto deleniti quidem deserunt. Quisquam, facere hic.</p>
+        <h3 id="red">internal styles</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptate hic non nulla? Architecto deleniti
+            quidem deserunt. Quisquam, facere hic.</p>
     </div>
     <div>
         <h3>External styles</h3>
-        <pc class="banana">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum asperiores laudantium officiis nisi sint consequatur doloribus ipsum reprehenderit soluta repudiandae?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi id optio quia est mollitia nisi culpa, sapiente, illum accusamus ad maiores numquam blanditiis doloremque ullam praesentium ipsam unde dicta veritatis!</p>
-    </div>
+        <pc class="banana">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum asperiores laudantium
+            officiis nisi sint consequatur doloribus ipsum reprehenderit soluta repudiandae?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi id optio quia est mollitia nisi culpa,
+                sapiente, illum accusamus ad maiores numquam blanditiis doloremque ullam praesentium ipsam unde dicta
+                veritatis!</p>
 </body>
+
 </html>
